--- a/assets/css/kratos.css
+++ b/assets/css/kratos.css
@@ -25,7 +25,7 @@
 
 body {
   overflow-x: hidden;
-  background: #f5f5f5;
+  background: #f6f7f8;
   font-weight: 350;
   font-size: 16px;
   font-family: -apple-system, BlinkMacSystemFont, opensans, Optima,
@@ -543,10 +543,11 @@ button:focus {
 }
 
 .k-main .board .article-panel {
-  margin: 0 0 23px;
+  margin: 0;
   border-radius: 0;
   background-color: #fff;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 3px rgba(27,95,160,.1);
+  border-bottom: 1px solid #f5f5f5;
 }
 
 .k-main .board .article-panel:last-of-type {
@@ -660,7 +661,7 @@ button:focus {
   clear: both;
   overflow: hidden;
   padding: 8px 20px;
-  border-top: 1px solid #f3f3f3;
+  /* border-top: 1px solid #f3f3f3; */
   font-size: 12px;
   line-height: 27px;
 }
@@ -1730,7 +1731,7 @@ button:focus {
   padding: 15px 30px;
   border-radius: 0;
   background-color: #fff;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 3px rgba(27,95,160,.1);
 }
 
 .k-main .sidebar .w-about,
